Alternado os DAOs e o application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,14 @@
+# 1. Configuração da Conexão Oracle
 quarkus.datasource.db-kind=oracle
 quarkus.datasource.username=RM564662
 quarkus.datasource.password=020207
 quarkus.datasource.jdbc.url=jdbc:oracle:thin:@oracle.fiap.com.br:1521:ORCL
 
-quarkus.http.cors=true
-quarkus.http.cors.origins=*
-quarkus.http.cors.methods=GET,POST,PUT,DELETE
+# 2. Configuração do Pool de Conexões (Anti-Stale Connection)
+# Define o tempo limite para uma conexão inativa (ex: 5 minutos)
+quarkus.datasource.jdbc.idle-timeout=5m
+# Testa a conexão antes de entregá-la para a aplicação (CRUCIAL!)
+quarkus.datasource.jdbc.initial-sql=SELECT 1 FROM DUAL 
+# Habilita a validação para evitar conexões fechadas
+quarkus.datasource.jdbc.transaction-isolation-level=READ_COMMITTED
+
